# easy-arb

./: .gitignore  AGENTS.md  Cargo.toml
.cargo/: config.toml
crates/arb-config/: Cargo.toml
crates/arb-contracts/: Cargo.toml
crates/arb-domain/: Cargo.toml
crates/arb-eventstore/: Cargo.toml
crates/arb-execution/: Cargo.toml
crates/arb-ledger/: Cargo.toml
crates/arb-ops/: Cargo.toml
crates/arb-reconciliation/: Cargo.toml
crates/arb-replay/: Cargo.toml
crates/arb-risk/: Cargo.toml
crates/arb-runtime/: Cargo.toml
crates/arb-runtime/src/: capabilities.rs  error.rs  fs_util.rs  health.rs  json_util.rs  lib.rs  main.rs
crates/arb-runtime/src/cli/: args.rs  commands.rs  help.rs  mod.rs
crates/arb-runtime/src/live/: basis_exit.rs  dispatch.rs  funding_exit.rs  guarded_cycle.rs  mod.rs  private_readonly.rs  resident.rs
crates/arb-runtime/src/monitors/: dashboard.rs  http.rs  mod.rs  wss.rs
crates/arb-runtime/src/pipelines/: basis.rs  full_pipeline.rs  funding_arb.rs  mod.rs
crates/arb-runtime/src/portfolio/: dashboard.rs
crates/arb-signing/: Cargo.toml
crates/arb-strategies/: Cargo.toml
crates/arb-strategy-api/: Cargo.toml
crates/arb-venue-data/: Cargo.toml
crates/arb-venue-exec/: Cargo.toml
crates/arb-venue-exec/src/: lib.rs
crates/arb-wallet-signer/: Cargo.toml
deploy/env/: easy-arb-live.env  easy-arb-live.env.example
deploy/nginx/: easy-tool-and-easy-arb.conf
deploy/systemd/: easy-arb-runtime-live.service
fixtures/replay/: README.md
runbooks/: arb-runtime-long-running-live.md  basis-dry-run-observer.md  cloud-server-config.md  six-venues-two-strategies-codex-plan.md
scripts/: cleanup-server-target.sh  deploy-arb-runtime-live-systemd.sh  release-funding-arb-unknown-position.sh  start-arb-runtime-live.sh  start-basis-monitors.sh  start-basis-opportunity-observer.sh  start-wss-book-ticker-monitors.sh  stop-arb-runtime-live.sh  stop-basis-opportunity-observer.sh  sync-server-data.sh
templates/: README.md  config.template.yaml  daily_operations_report.template.md  personal_guarded_live.preflight.yaml
universal_arb_platform_v2_immutable_core_docs/: README.md
universal_arb_platform_v2_immutable_core_docs/docs/: 00_Start_Here_CN.md  14_Data_Schemas_and_Contracts.md  21_State_Machines_and_Replay_Fixtures.md  22_Development_Execution_Plan.md  23_Module_Architecture_Map.md  24_Codex_Development_Runbook.md  25_Core_Architecture_Reference.md  26_Operations_Manual_CN.md  cex_dex_funding_arbitrage_risk_guide.md
universal_arb_platform_v2_immutable_core_docs/review/: controlled_live_readiness_checklist.md  controlled_live_readiness_review.md  personal_guarded_live_checklist_audit_report.md  personal_guarded_live_evidence_collection_guide.md  personal_guarded_live_evidence_index.md  (+4 more)
xtask/: Cargo.toml  README.md
(+208 files in other folders)
