[workspace]
members = [
    "crates/arb-domain",
    "crates/arb-contracts",
    "crates/arb-config",
    "crates/arb-eventstore",
    "crates/arb-ledger",
    "crates/arb-reconciliation",
    "crates/arb-risk",
    "crates/arb-execution",
    "crates/arb-strategy-api",
    "crates/arb-strategies",
    "crates/arb-venue-data",
    "crates/arb-venue-exec",
    "crates/arb-signing",
    "crates/arb-replay",
    "crates/arb-ops",
    "crates/arb-runtime",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
