[package]
name = "arb-runtime"
version = "0.1.0"
edition.workspace = true

[features]
default = []
live-exec = [
    "dep:arb-signing",
    "dep:arb-venue-exec",
    "arb-signing/real-signing",
    "arb-venue-exec/live-exec",
]

[dependencies]
arb-config = { path = "../arb-config" }
arb-contracts = { path = "../arb-contracts" }
arb-domain = { path = "../arb-domain" }
arb-eventstore = { path = "../arb-eventstore" }
arb-execution = { path = "../arb-execution" }
arb-ledger = { path = "../arb-ledger" }
arb-ops = { path = "../arb-ops" }
arb-reconciliation = { path = "../arb-reconciliation" }
arb-replay = { path = "../arb-replay" }
arb-risk = { path = "../arb-risk" }
arb-strategies = { path = "../arb-strategies" }
arb-strategy-api = { path = "../arb-strategy-api" }
arb-venue-data = { path = "../arb-venue-data" }
arb-signing = { path = "../arb-signing", default-features = false, optional = true }
arb-venue-exec = { path = "../arb-venue-exec", default-features = false, optional = true }
native-tls = "0.2.18"
