[package]
name = "arb-venue-exec"
version = "0.1.0"
edition.workspace = true

[features]
default = []
live-exec = ["dep:arb-signing", "arb-signing/real-signing"]

[dependencies]
arb-contracts = { path = "../arb-contracts" }
arb-domain = { path = "../arb-domain" }
arb-signing = { path = "../arb-signing", default-features = false, optional = true }
